# king-gizzard-setlist-prediction

./: .env.example  .gitignore  LICENSE  Makefile  README.md  predict_setlist.py  pyproject.toml  requirements.txt  settings.local.json
configs/: models.yaml
data/: venue_country_mapping.json
experiments/: run_stage1.py  run_stage2_ab_test.py  run_stage3a.py  run_stage3b.py  run_stage4a_gnn_baseline.py  run_stage4b_gnn_dropout.py  run_stage5a_hyperparam_tune.py  run_stage5b_final_model.py  stage1_traditional_ml.yaml  stage2_xgboost_tuning.yaml  stage3_neural_models.yaml
scripts/: analyze_genre_clusters.py  analyze_song_cooccurrence.py  data_pipeline.py  generate_eda_cooccurrence.py  generate_eda_figures.py  generate_pmi_matrix.py  generate_predictions.py  generate_training_curves.py  set_resource_limits.py  validate_venue_mapping.py  verify_setup.py  visualize.py
src/: __init__.py  dataio.py
src/features/: __init__.py  context_features.py  cooccurrence_features.py  engineer_features.py  feature_pipeline.py  opener_closer_features.py  residency_features.py  show_context.py  song_features.py  temporal_features.py
src/inference/: context_retrieval.py
src/ingest/: __init__.py  setlistfm.py
src/models/: __init__.py  temporal_sets_gnn.py
src/models/stage0/: __init__.py  sasrec.py  sasrec_data.py  sequence_generator.py  set_model.py
src/utils/: __init__.py  aliases.py  config.py  constants.py  model_config.py  test_config.py  venue_mapping.py
tests/: README.md  __init__.py  run_all_tests.py  test_basic.py  test_dataio.py  test_features.py  test_inference.py  test_models.py  test_venue_mapping.py
(+18 files in other folders)
